--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Zelong Xu / HomePage"
+title                    : "Zelong Xu"
 title_separator          : ""
 name                     : &name "Zelong Xu"
 description              : &description "personal description"
