--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #   url: /publications/
+
+  - title: "Experience"
+    url: /experience/
 
   # - title: "Talks"
   #   url: /talks/    
@@ -18,5 +21,4 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Experience"
-    url: /experience/
+
