[Update] depart 2 page for experience

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,11 +3,11 @@ main:
   # - title: "Publications"
   #   url: /publications/
 
-  - title: "Experience"
-    url: /experience/
+  - title: "Research"
+    url: /research/
 
-  # - title: "Talks"
-  #   url: /talks/    
+  - title: "Work"
+    url: /work/    
 
   # - title: "Teaching"
   #   url: /teaching/    
