Update about me and config

--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Zelong Xu"
   avatar           : "Zelong.jpg"
   bio              : 
-  location         : "Dongguan,Guangdong"
-  employer         : "Epropulsion Technology Co., Ltd."
+  location         : "Clear Water Bay, Hong Kong"
+  employer         : "the Hong Kong University of Science and Technology"
   pubmed           : 
   googlescholar    : 
   email            : "xuzlsoul@gmail.com"
