--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "Zelong.jpg"
   bio              : 
   location         : "Clear Water Bay, Hong Kong"
-  employer         : "the Hong Kong University of Science and Technology"
+  employer         : "HKUST"
   pubmed           : 
   googlescholar    : 
   email            : "xuzlsoul@gmail.com"
